...

        final dummyMotors = List.generate(
          2,
          (index) => MotorModel(
            brand: "Honda Vario",
            model: "150 CBS",
            licensePlate: "B 1234 XYZ",
            year: 2022,
            color: "Hitam Doff",
          ),
        );

        final displayMotors = showSkeleton ? dummyMotors : controller.motors;
...
